[package]
name = "harbinger"
version = "0.1.0"
edition = "2024"


[dependencies]
nanoid = "0.4.0"
rustc-hash = "2.1.0"
tokio = { version = "1.42.0", features = ["full"] }
ipconfig = "0.3.2"
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
dashmap = "6.1.0"
bitflags = "2.6.0"
thiserror = "2.0.7"
socket2 = { version = "0.5.8",features = ["all"] }
rand = "0.8.5"