[package]
name = "harbinger"
version = "0.1.0"
edition = "2024"

[dependencies]
nanoid = "0.4.0"
rustc-hash = "2.1.0"
tokio = { version = "1.43.0", features = ["full","tracing"] }
ipconfig = "0.3.2"
serde = { version = "1.0.217", features = ["derive"] }
dashmap = "6.1.0"
bitflags = "2.8.0"
anyhow = { version = "1.0.95", features = ["backtrace"] }
futures = "0.3.31"
bytes = "1.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-util = { version = "0.7.13", features = ["net", "codec"] }
bincode = "1.3.3"
netif = { git = "https://github.com/OpenTritium/netif.git", branch = "main" }
regex = "1.6.0"

